--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             const text = formData.get('email_text');
 
             try {
-                const response = await fetch('http://127.0.0.1:5000/predict', {
+                const response = await fetch('https://spamemailclassification.onrender.com/predict', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
